CHANGES IN VERSION 1.43.4
-------------------------

UTILITIES

    o tweak the display of progress information in `seqVCF2GDS()`


CHANGES IN VERSION 1.42.1
-------------------------

UTILITIES

    o update the help files of `seqBlockApply()` and `seqUnitApply()`

    o detect the output filename extension in `seqGDS2VCF()` without
      considering the case of the characters, supporting .gz, .bgz, .bz and .xz
      as a filename extension

    o fix the compiler warning: -Wformat-security

    o new option 'include.pheno=TRUE' in `seqBED2GDS()`


CHANGES IN VERSION 1.42.0
-------------------------

UTILITIES

    o new option 'write.rsid' in `seqGDS2BED()`


CHANGES IN VERSION 1.40.1
-------------------------

BUG FIXES

    o `seqAddValue(gdsfile, varnm="position")` works correctly


CHANGES IN VERSION 1.40.0
-------------------------

    o fix the compiler warning: sprintf is deprecated


CHANGES IN VERSION 1.38.0
-------------------------

UTILITIES

    o new option 'ext_nbyte' in `seqGet2bGeno()`

    o `seqAlleleCount()` and `seqGetAF_AC_Missing()` return NA instead of zero
      when all genotypes are missing at a site

    o `seqGDS2VCF()` does not output the FORMAT column if there is no selected
      sample (e.g., site-only VCF files)

    o `seqGetData(, "$chrom_pos2")` is similar to `seqGetData(, "$chrom_pos")`
      except the duplicates with the suffix ("_1", "_2" or >2)

NEW FEATURES

    o `seqGDS2BED()` can convert to PLINK BED files with the best-guess
      genotypes when there are only numeric dosages in the GDS file

    o `seqEmptyFile()` outputs an empty GDS file


CHANGES IN VERSION 1.36.2
-------------------------

BUG FIXES

    o fix the bug at multi-allelic sites with more than 15 different alleles,
      see https://github.com/zhengxwen/SeqArray/issues/78


CHANGES IN VERSION 1.36.1
-------------------------

BUG FIXES

    o `seqExport()` failed when there is no variant

    o `seqSetFilter(, ret.idx=TRUE)`, see